[package]
name = "fido2luks"
version = "0.2.19"
authors = ["shimunn <shimun@shimun.net>"]
edition = "2018"

description = "Decrypt your LUKS partition using a FIDO2 compatible authenticator"
documentation = "https://github.com/shimunn/fido2luks/blob/master/README.md"
homepage = "https://github.com/shimunn/fido2luks"
repository = "https://github.com/shimunn/fido2luks"
readme = "README.md"
keywords = ["luks", "fido2", "u2f"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
exclude = [
    ".github",
    ".devcontainer",
]

[dependencies]
ctap_hmac = { version="0.4.5", features = ["request_multiple"] }
hex = "0.3.2"
ring = "0.13.5"
failure = "0.1.5"
rpassword = "4.0.1"
structopt = "0.3.2"
libcryptsetup-rs = "0.4.1"
serde_json = "1.0.51"
serde_derive = "1.0.106"
serde = "1.0.106"

[build-dependencies]
ctap_hmac = { version="0.4.5", features = ["request_multiple"] }
hex = "0.3.2"
ring = "0.13.5"
failure = "0.1.5"
rpassword = "4.0.1"
libcryptsetup-rs = "0.4.1"
structopt = "0.3.2"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
incremental = false
overflow-checks = false

[package.metadata.deb]
# Note: this presently only works with native target; doesnt work when cross compiling [https://github.com/mmstick/cargo-deb/issues/117]
# FYI from amd64: libuuid1 (>= 2.34), libjson-c4 (>= 0.13.1+dfsg), libudev1 (>= 245.4), libc6 (>= 2.31), libpcre2-8-0 (>= 10.34), libargon2-1 (>= 0~20171227), libblkid1 (>= 2.34), libselinux1 (>= 3.0), cryptsetup (>=2:2.2.2), libdevmapper1.02.1 (>= 2:1.02.167), libssl1.1 (>= 1.1.1f), libcryptsetup12 (>= 2:2.2.2)
depends = "$auto, cryptsetup"
# Note: this property has been removed, but leaving it as the building system still needs these packages
#build-depends = "libclang-dev, libcryptsetup-dev"
extended-description = "Decrypt your LUKS partition using a FIDO2 compatible authenticator"
assets = [
    ["target/release/fido2luks", "usr/bin/", "755"],
    ["target/release/assets/fido2luks.bash", "usr/share/bash-completion/completions/fido2luks", "644"],
    ["pam_mount/fido2luksmounthelper.sh", "usr/bin/", "755"],
    ["initramfs-tools/keyscript.sh", "/lib/cryptsetup/scripts/fido2luks", "755" ],
    ["initramfs-tools/hook/fido2luks.sh", "etc/initramfs-tools/hooks/", "755" ],
    ["initramfs-tools/fido2luks.conf", "etc/", "644"],
]
conf-files = ["/etc/fido2luks.conf"]
# TODO: add trigger for initramfs update
